# Discord_bot_rust

./: .env  .gitignore  Cargo.toml  README.md
src/: Similarity.rs  api.rs  lib.rs  main.rs  menu_helpter.rs  similarity.rs
src/api/: genius_api.rs  open_subsonic_api.rs  spotify_api.rs
