[package]
name = "discord_bot"
version = "0.1.0"
edition = "2024"



[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serenity-commands = "0.8.0"
poise = "0.6.1"
dotenv = "0.15.0"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "chrono",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
]
version = "0.12"
