[package]
name = "discord_bot"
version = "0.1.0"
edition = "2024"



[dependencies]
tokio = { version = "1.52.1", features = ["full"] }
poise = "0.6.2"
dotenv = "0.15.0"
reqwest = { version = "0.13.3", features = ["json", "form"],default-features = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149",default-features = true}
rand = "0.10.1"
md5 = "0.8.0"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "chrono",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "collector",
]
version = "0.12"
